Made it so that we only display Prifddinas as an available special tree patch if the user has a crystal acorn, a crystal seedling, or a crystal sapling in their inventory - DC